--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.dashboard.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.dashboard.scss
@@ -7,46 +7,14 @@
 //=============================================================================
 
 .main-panel {
-  display: flex;
-  flex-direction: column;
-  flex-wrap: nowrap;
-  justify-content: flex-start;
-  align-items: stretch;
-  gap: 0;
-  height  : 100%;
-  overflow: hidden;
+  display: block;
+  height : 100%;
 }
 
 //=============================================================================
 
-.filters {
-  width: 100%;
-  padding-top: 4px;
-  display: flex;
-  align-items: baseline;
-
-  mat-form-field {
-    margin-left: 8px;
-  }
-  mat-button-toggle-group {
-    margin-left: 8px;
-  }
-
-  button {
-    vertical-align: middle;
-  }
-}
-
-//=============================================================================
-
-.ts-layout {
-  display: flex;
-  flex-direction: row;
-  flex-wrap: wrap;
-  justify-content: flex-start;
-  gap     : 0;
-  height  : 100%;
-  overflow: auto;
+.scope-selector {
+  margin: 16px 0px 16px 8px;
 }
 
 //=============================================================================
