--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.dashboard.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading-system.dashboard.html
@@ -1,70 +1,23 @@
-<div class="main-panel">
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
+<development-panel #developPanel *ngIf="selScope.value=='DV'" class="main-panel">
+  <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selScope" class="scope-selector">
+    <mat-button-toggle value="DV" (change)="onScopeSet()">{{ scope("DV") }}</mat-button-toggle>
+    <mat-button-toggle value="RD" (change)="onScopeSet()">{{ scope("RD") }}</mat-button-toggle>
+    <mat-button-toggle value="TR" (change)="onScopeSet()">{{ scope("TR") }}</mat-button-toggle>
+  </mat-button-toggle-group>
+</development-panel>
 
-  <div class="filters">
-    <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selScope">
-<!--      <mat-button-toggle value="DV" (change)="onScopeSet('DV')">{{ scope("DV") }}</mat-button-toggle>-->
-      <mat-button-toggle value="RD" (change)="onScopeSet()">{{ scope("RD") }}</mat-button-toggle>
-      <mat-button-toggle value="TR" (change)="onScopeSet()">{{ scope("TR") }}</mat-button-toggle>
-      <mat-button-toggle value="RV" (change)="onScopeSet()">{{ scope("RV") }}</mat-button-toggle>
-    </mat-button-toggle-group>
+<ready-panel #readyPanel *ngIf="selScope.value=='RD'" class="main-panel">
+  <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selScope" class="scope-selector">
+    <mat-button-toggle value="DV" (change)="onScopeSet()">{{ scope("DV") }}</mat-button-toggle>
+    <mat-button-toggle value="RD" (change)="onScopeSet()">{{ scope("RD") }}</mat-button-toggle>
+    <mat-button-toggle value="TR" (change)="onScopeSet()">{{ scope("TR") }}</mat-button-toggle>
+  </mat-button-toggle-group>
+</ready-panel>
 
-    <mat-form-field>
-      <mat-label>{{loc("filter")}}</mat-label>
-      <input matInput type="text" [(ngModel)]="filter">
-      @if (filter) {
-        <button matSuffix mat-icon-button (click)="filter=''">
-          <mat-icon>close</mat-icon>
-        </button>
-      }
-    </mat-form-field>
-
-    <div *ngIf="selScope.value=='TR'">
-      <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selRunning">
-        <mat-button-toggle value="*" (change)="onFlagRunningChange()">{{ loc("filters.all") }}</mat-button-toggle>
-        <mat-button-toggle value="r" (change)="onFlagRunningChange()">{{ loc("filters.running") }}</mat-button-toggle>
-        <mat-button-toggle value="s" (change)="onFlagRunningChange()">{{ loc("filters.stopped") }}</mat-button-toggle>
-      </mat-button-toggle-group>
-
-      <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selActive">
-        <mat-button-toggle value="*" (change)="onFlagActiveChange()">{{ loc("filters.all") }}</mat-button-toggle>
-        <mat-button-toggle value="a" (change)="onFlagActiveChange()">{{ loc("filters.active") }}</mat-button-toggle>
-        <mat-button-toggle value="i" (change)="onFlagActiveChange()">{{ loc("filters.inactive") }}</mat-button-toggle>
-      </mat-button-toggle-group>
-
-      <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selActivation">
-        <mat-button-toggle value="*" (change)="onFlagActivationChange()">{{ loc("filters.all") }}</mat-button-toggle>
-        <mat-button-toggle value="m" (change)="onFlagActivationChange()">{{ loc("filters.manual") }}</mat-button-toggle>
-        <mat-button-toggle value="a" (change)="onFlagActivationChange()">{{ loc("filters.auto") }}</mat-button-toggle>
-      </mat-button-toggle-group>
-    </div>
-    <span style="flex:1 0 auto"></span>
-
-    <button mat-stroked-button [disabled]="true">{{tradingSystems.length}}</button>
-    <div>
-      <button mat-icon-button (click)="reload()">
-        <span class="material-symbols-outlined">refresh</span>
-      </button>
-    </div>
-<!--    <button mat-button (click)="onCreateClick()">{{button("create")}}</button>-->
-  </div>
-
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-  <div class="ts-layout" *ngIf="selScope.value=='RD'">
-    <trading-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts"></trading-card>
-  </div>
-
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-  <div class="ts-layout" *ngIf="selScope.value=='TR'">
-    <trading-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts"></trading-card>
-  </div>
-
-  <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
-
-  <div class="ts-layout" *ngIf="selScope.value=='RV'">
-    <trading-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts"></trading-card>
-  </div>
-
-</div>
+<trading-panel #tradingPanel *ngIf="selScope.value=='TR'" class="main-panel">
+  <mat-button-toggle-group [hideSingleSelectionIndicator]="true" [formControl]="selScope" class="scope-selector">
+    <mat-button-toggle value="DV" (change)="onScopeSet()">{{ scope("DV") }}</mat-button-toggle>
+    <mat-button-toggle value="RD" (change)="onScopeSet()">{{ scope("RD") }}</mat-button-toggle>
+    <mat-button-toggle value="TR" (change)="onScopeSet()">{{ scope("TR") }}</mat-button-toggle>
+  </mat-button-toggle-group>
+</trading-panel>
