--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.scss
@@ -58,6 +58,7 @@
 .chart-layout {
   width:  400px;
   height: 200px;
+  margin-bottom: 8px;
 }
 
 //=============================================================================
