--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready.panel.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready.panel.html
@@ -27,6 +27,6 @@
   <!-- - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - - -->
 
   <div class="ts-layout">
-    <trading-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts"></trading-card>
+    <ready-card *ngFor="let ts of tradingSystems" [tradingSystem]="ts"></ready-card>
   </div>
 </div>
