--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/ready/ready-card/ready.card.scss
@@ -56,9 +56,9 @@
 //=============================================================================
 
 .chart-layout {
-  width:  400px;
-  height: 200px;
-  margin-bottom: 8px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #A0B0C0;
 }
 
 //=============================================================================
