--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading-card/trading.card.html
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading-card/trading.card.html
@@ -17,7 +17,7 @@
 
   <mat-card-content style="padding: 0px 8px 0px 8px">
     <div class="info-layout">
-      <img class="chart-layout" src="https://material.angular.io/assets/img/examples/shiba2.jpg2">
+      <img class="chart-layout" src="data:image/png;base64,{{equityChart}}">
       <table class="table-layout">
         <tr>
           <td>{{loc('lastNetProfit')}}</td>
