--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading-card/trading.card.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading-card/trading.card.scss
@@ -56,8 +56,9 @@
 //=============================================================================
 
 .chart-layout {
-  width:  400px;
-  height: 200px;
+  border-width: 1px;
+  border-style: solid;
+  border-color: #A0B0C0;
 }
 
 //=============================================================================
