Doc-editor: initial version

--- a/src/app/layout/app.component.html
+++ b/src/app/layout/app.component.html
@@ -2,3 +2,5 @@
   <header-panel></header-panel>
   <main-panel></main-panel>
 </div>
+
+<doc-editor *ngIf="portalService.showDocEditor"></doc-editor>
