Commit before upgrading to angular 19

--- a/src/app/component/panel/right-title/right-title.panel.html
+++ b/src/app/component/panel/right-title/right-title.panel.html
@@ -1,5 +1,5 @@
 <mat-toolbar class="toolbar">
-  <mat-icon>{{icon}}</mat-icon>
+  <mat-icon class="material-symbols-outlined">{{icon}}</mat-icon>
   <div class="title">{{title}}</div>
   <span class="filler"></span>
 
