--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading-card/trading.card.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/trading/trading-card/trading.card.scss
@@ -92,3 +92,9 @@ mat-card-actions check-button {
 }
 
 //=============================================================================
+
+.performance-layout {
+  min-width: 150px;
+}
+
+//=============================================================================
