Massive review of metrics import functionality. Added performance panel with summary and trade list tabs

--- a/src/app/layout/app.component.html
+++ b/src/app/layout/app.component.html
@@ -1,4 +1,4 @@
-<div *ngIf="sessionService.isAuthenticated">
+<div *ngIf="sessionService.isAuthenticated && labelService.isLoaded">
   <header-panel></header-panel>
   <main-panel></main-panel>
 </div>
