--- a/src/app/layout/main-panel/main.panel.html
+++ b/src/app/layout/main-panel/main.panel.html
@@ -8,7 +8,7 @@
         <work-panel class="workPanel"></work-panel>
     </mat-sidenav-content>
 
-    <mat-sidenav #rightNavig position="end" disableClose="true">
+    <mat-sidenav #rightNavig position="end" disableClose="true" class="right-layout">
         <right-panel></right-panel>
     </mat-sidenav>
 
