--- a/src/app/layout/main-panel/main.panel.scss
+++ b/src/app/layout/main-panel/main.panel.scss
@@ -29,3 +29,9 @@
 }
 
 //=============================================================================
+
+.right-layout {
+  width: inherit;
+}
+
+//=============================================================================
