--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.scss
@@ -6,13 +6,15 @@
 //=== found in the LICENSE file
 //=============================================================================
 
-export enum Setting {
-  Portfolio_TradSys_Scope      = "port.ts.scope",
-  Portfolio_TradSys_Running    = "port.ts.running",
-  Portfolio_TradSys_Active     = "port.ts.active",
-  Portfolio_TradSys_Activation = "port.ts.activation",
-  Portfolio_TradSys_PerfPeriod = "port.ts.perfPeriod",
-  Portfolio_TradSys_PerfTab    = "port.ts.perfTab",
+.main-layout {
+  display: flex;
+  flex-direction: column;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: stretch;
+  gap: 8px;
+  height   : 100%;
+  overflow: hidden;
 }
 
 //=============================================================================
