--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/performance.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/performance.panel.scss
@@ -7,6 +7,7 @@
 //=============================================================================
 
 .main-layout {
+  width: 1800px;
   display: flex;
   flex-direction: column;
   flex-wrap: nowrap;
@@ -19,10 +20,31 @@
 
 //=============================================================================
 
-.form-layout {
+.header-layout {
+  display: flex;
+  flex-direction: row;
+  flex-wrap: nowrap;
+  justify-content: flex-start;
+  align-items: center;
+  gap: 8px;
+}
+
+//=============================================================================
+
+.periods-layout {
+}
+
+//=============================================================================
+
+.tabs-layout {
+}
+
+//=============================================================================
+
+.panel-layout {
   flex: 1 1 auto;
   overflow: auto;
-  padding: 0 8px 0 8px;
+//  padding: 0 8px 0 8px;
 }
 
 //=============================================================================
