--- a/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.scss
+++ b/src/app/layout/main-panel/work-panel/portfolio/trading-system/performance/chart/chart.panel.scss
@@ -18,3 +18,16 @@
 }
 
 //=============================================================================
+
+.chart-layout {
+  flex: 1 1 auto;
+  overflow: auto;
+}
+
+//=============================================================================
+
+.toggle-layout {
+  margin-right: 8px;
+}
+
+//=============================================================================
